--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-list.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-list.vm
@@ -192,6 +192,28 @@
 					$!term
 				</td>
 			</tr>
+
+                        <!-- NYU modifications here -->
+			<tr>
+				<th>School</th>
+				<td>
+					$!siteSchool
+				</td>
+			</tr>
+			<tr>
+				<th>Department</th>
+				<td>
+					$!siteDepartment
+				</td>
+			</tr>
+			<tr>
+				<th>Location</th>
+				<td>
+					$!siteLocation
+				</td>
+			</tr>
+
+
 			#if ($!allowUpdate)
 			<tr> 
 				<th>
