CLASSES-1063 copy across our customised lessonbuilder welcome page (general.html)

--- a/lessonbuilder/tool/src/webapp/templates/instructions/general.html
+++ b/lessonbuilder/tool/src/webapp/templates/instructions/general.html
@@ -3,8 +3,8 @@
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 	<title>general.html</title>
 	<link href="/library/skin/tool_base.css" type="text/css" rel="stylesheet" media="all" />
-	<link href="/library/skin/morpheus-default/tool.css" type="text/css" rel="stylesheet" media="all" />
-	<script type="text/javascript" src="/library/js/headscripts.js"></script>
+	<link href="/library/skin/neo-new-york-u/tool.css" type="text/css" rel="stylesheet" media="all" />
+	<script type="text/javascript" language="JavaScript" src="/library/js/headscripts.js"></script>
 	<style>body { padding: 5px !important; }</style>
 </head>
 <body>
@@ -17,5 +17,11 @@
 	their students.
 </p>
 
+<p>
+	For an overview of the Lessons tool and its functionality, please review the
+	<a href="http://www.nyu.edu/servicelink/041231415155668" target="_blank">following article</a>.
+</p>
+
 </body>
 </html>
+
