CLASSES-1333 Realms tool changes for Service Team Admins.

--- a/admin-tools/src/webapp/vm/authz/chef_realms_list.vm
+++ b/admin-tools/src/webapp/vm/authz/chef_realms_list.vm
@@ -70,7 +70,7 @@
 	#foreach ($realm in $realms)
 			<tr>
 				<td headers="Id">
-						#if ($service.allowUpdate($realm.Id))
+						#if ($service.allowUpdate($realm.Id) && !$serviceTeam)
 							<a href="#toolLinkParam("$action" "doEdit" "id=$validator.escapeUrl($realm.Id)")" title="$tlang.getString("realm.edit.edit") $validator.escapeHtml($realm.Id)">
 								$validator.escapeHtml($realm.Id)
 							</a>
