--- a/samigo/samigo-app/src/webapp/templates/BeginTakingAssessment.html
+++ b/samigo/samigo-app/src/webapp/templates/BeginTakingAssessment.html
@@ -4,6 +4,7 @@
 <head>
 	<link href="/library/skin/tool_base.css" type="text/css" rel="stylesheet" media="all" />
 	<link href="/library/skin/default/tool.css" type="text/css" rel="stylesheet" media="all" />
+	<link href="/library/skin/morpheus-nyu/tool.css" type="text/css" rel="stylesheet" media="all" />
 	<link href="/samigo-app/css/tool_sam.css" type="text/css" rel="stylesheet" media="all" />
 	<title rsf:id="assessmentTitle">Assessment Title</title>
 </head>
