--- a/portal/portal-render-engine-impl/impl/src/webapp/vm/morpheus/includePageNav.vm
+++ b/portal/portal-render-engine-impl/impl/src/webapp/vm/morpheus/includePageNav.vm
@@ -168,7 +168,16 @@
 				#end ## END of IF (${sitePages.pageNavCanAddMoreTools})
 
 				#if (${sitePages.pageNavShowHelp})
-	
+				    #if ($usingExternalHelp)
+					#if ($externalHelpMain)
+					    <li class="Mrphs-toolsNav__menuitem--help">
+						<a class="Mrphs-toolsNav__menuitem--link" accesskey="6" href="${externalHelpMain.url}" target="_blank" title="${externalHelpMain.label}">
+						    <span  class="Mrphs-toolsNav__menuitem--icon ${sitePages.helpMenuClass}"> </span>
+						    <span class="Mrphs-toolsNav__menuitem--title">${externalHelpMain.label}</span>
+						</a>
+					    </li>
+					#end
+				    #else
 					<li class="Mrphs-toolsNav__menuitem--help">
 						<a class="Mrphs-toolsNav__menuitem--link" accesskey="6" href="${sitePages.pageNavHelpUrl}" target="_blank" onclick="openWindow('${sitePages.pageNavHelpUrl}', 'Help', 'resizable=yes,toolbar=no,scrollbars=yes,menubar=yes,width=1024,height=768'); return false" title="${rloader.sit_help}">
 							<span  class="Mrphs-toolsNav__menuitem--icon ${sitePages.helpMenuClass}"> </span>
@@ -176,6 +185,7 @@
 							<span class="skip">${rloader.site_newwindow}</span>
 						</a>
 					</li>
+				    #end
 	
 				#end ## END of IF (${sitePages.pageNavShowHelp})
 	
