--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-editInfo.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-editInfo.vm
@@ -263,7 +263,7 @@
 				</div>
 			</div>
 		#else
-			#if($allowSiteIcon)
+			#if($allowSiteIcon && $isProjectSite)
 				<div class="form-group row">
 					<label for="iconUrl" class="col-sm-2 form-control-label">
 						$tlang.getString("sitediinf.ico")
