CLASSES-1564 Remove "Appearance" and add "Created By" to settings page
git-svn-id: https://source.sakaiproject.org/svn/msub/nyu.edu/10.7/trunk@324064 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-list.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-list.vm
@@ -380,8 +380,20 @@
 					$!siteCreationDate
 				</td>
 			</tr> 
+                        #if ($!owner)
+			<tr>
+				<th>
+					Created by
+				</th>
+				<td>
+					$!owner
+				</td>
+			</tr> 
+                        #end
 		
 		#if ($!isCourseSite)
+                <!-- Hidden by NYU -->
+                <!--
 			<tr>
 				<th>
 					$tlang.getString("sitegen.siteinfolist.app")
@@ -390,6 +402,7 @@
 					$!siteUnit
 				</td>
 			</tr>
+                -->
 		#else
 			#if ($!siteIcon)
 				<tr>
