--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-list.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-list.vm
@@ -466,6 +466,16 @@
 				<a class="getSiteDesc" href="#" id="$!siteId">$tlang.getString("sinfo.list.desc.more")</a>
 			</div>
 		#end
+
+                <div id="joinable-groups-info-message" style="display: none;">
+                    <p><b>Note:</b> Students can view and join groups via the Site Groups tool in the left hand menu.  This tool is only visible to students.  <a href="http://www.nyu.edu/servicelink/KB0012830" target="_blank">Click here to learn more</a>.</p>
+                </div>
+
+                <script>
+                 if (window.parent.showSiteInfoAsSettings === true && window.parent.showJoinableGroups === true) {
+                     $('#joinable-groups-info-message').show();
+                 }
+                </script>
 		#if ($!groups.size() > 0 || $!joinableGroups.size() > 0 || $!sections.size() > 0)
 		<div id="accordion">
 			#if ($!sections.size() > 0)
