--- a/gradebook/app/ui/src/webapp/css/spreadsheetUI.css
+++ b/gradebook/app/ui/src/webapp/css/spreadsheetUI.css
@@ -1,10 +1,14 @@
 div#mainwrap {
    position: relative;
 }
+
+
 div#headers {
    background-color: #ddd;
    border: 1px solid #afafaf;
    border-bottom: 4px solid #afafaf;
+   height: 45px;
+   margin-right: 0px;
    overflow: hidden;
    padding: 0;
 }
