--- a/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
+++ b/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
@@ -1215,7 +1215,7 @@ div[role="dialog"] {
      box-shadow: 0px 0px 0px 0px #ccc;
     
 }
-#multipleChoiceAnswers, #copyableShortanswerDiv {
+#copyableShortanswerDiv {
     line-height:30px;
 }
 
@@ -2053,4 +2053,81 @@ nav.Mrphs-container--toolTitleNav .Mrphs-directUrl__dropDown .active {
 .subpage-breadcrumb-div {
     margin-top: 1.5em;
     margin-bottom: -1em
+/* Styles for the poll's new horizontal bar graph */
+.question-submit {
+  margin-top: 10px;
+}
+.questionPollResult {
+  width: 100%;
+  height: 2em;
+  position: relative;
+  margin: 10px 0 20px -24px;
+}
+.questionPollResult .questionPollResultBar {
+  -webkit-transition: width 1s;
+  transition: width 1s;
+
+  height: 2em;
+  background-color: #BBC;
+  width: 0;
+  min-width: 2px;
+  display: block;
+}
+.questionPollResult .questionPollResultLabel {
+  position: absolute;
+  top: 0;
+  left: 10px;
+  line-height: 2em;
+  color:  #888;
+}
+/*.questionStatusText.correct {
+  color: #2B7C10;
+}
+.questionStatusText.incorrect {
+  color: #D71D1D; 
+}*/
+.questionInstructorMessage {
+  display: inline-block;
+  color: #888;
+  font-size: 0.9em;
+}
+.multipleChoiceAnswers {
+  list-style: upper-alpha inside;
+  padding-left: 24px;
+}
+.multipleChoiceAnswers li input {
+  left: -24px;
+  position: absolute;
+  top: 2px;
+  margin: 0;
+}
+#multipleChoiceDialogDiv #multipleChoiceAnswers table th {
+  font-size: 0.9em;
+  font-weight: 300;
+  text-align: left;
+  vertical-align: top;
+  color: #888;
+}
+#multipleChoiceDialogDiv #multipleChoiceAnswers {
+  counter-reset: multipleChoiceAnswers;
+}
+#multipleChoiceDialogDiv #multipleChoiceAnswers #copyableMultipleChoiceAnswerDiv .question-multiplechoice-answer-counter:before,
+#multipleChoiceDialogDiv #multipleChoiceAnswers #extraMultipleChoiceAnswers .question-multiplechoice-answer-counter:before {
+  content: counter(multipleChoiceAnswers, upper-alpha) ". ";
+  counter-increment: multipleChoiceAnswers;
+  margin-right: 5px;
+}
+.multipleChoiceAnswer {
+  color: #888;
+}
+.multipleChoiceAnswer.correct-answer,
+.multipleChoiceAnswer.correct-answer label {
+  color: #070 !important;
+  font-weight: bold;
+}
+.shortanswerDiv {
+    margin-bottom: 1em;
+}
+.questionCorrectAnswerMessage {
+    font-weight: bold;
 }
