--- a/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-list.vm
+++ b/site-manage/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-list.vm
@@ -213,6 +213,17 @@
 				</td>
 			</tr>
 
+                        #if ($!siteInstructionMode)
+			<tr>
+				<th>Instruction Mode</th>
+				<td>
+					$!siteInstructionMode
+				</td>
+			</tr>
+                        #end
+
+			#end
+
 
 			#if ($!allowUpdate)
 			<tr> 
