--- a/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
+++ b/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
@@ -1270,6 +1270,11 @@ div[role="dialog"] {
     width:250px;
     display:block;
 }
+/* CLASSES-1931 */
+.direct-url-wrap,
+.tool-directurl {
+    display: none !important;
+}
 .portletTitle .title {
     float: left;
 }
