--- a/portal/portal-render-engine-impl/pack/src/webapp/vm/morpheus/includePageNav.vm
+++ b/portal/portal-render-engine-impl/pack/src/webapp/vm/morpheus/includePageNav.vm
@@ -52,7 +52,7 @@
 						#if (${page.toolpopup})
 	
 							<li>
-								<a class="Mrphs-toolsNav__menuitem--link #if(${page.hidden})is-invisible#end" href="${page.pageRefUrl}?sakai.popup=yes" title="${page.description}" onclick="window.open('${page.toolpopupurl}');">
+								<a class="Mrphs-toolsNav__menuitem--link #if(${page.hidden})is-invisible#end" href="${page.pageRefUrl}?sakai.popup=yes" title="${page.pageTitle}" onclick="window.open('${page.toolpopupurl}');">
 									<span class="Mrphs-toolsNav__menuitem--icon ${page.menuClass} $!{page.menuClassOverride}"></span>
 									<span class="Mrphs-toolsNav__menuitem--title">${page.pageTitle}</span>
 								</a>
@@ -63,7 +63,7 @@
 							#if (${page.ispopup})
 	
 								<li>
-									<a class="Mrphs-toolsNav__menuitem--link #if(${page.hidden})is-invisible#end" href="javascript:;" title="${page.pageTitle} - ${page.pageTitle}" onclick="window.open( '${page.pagePopupUrl}${page.pageId}','${page.jsPageTitle}','resizable=yes,toolbar=no,scrollbars=yes, width=1024,height=768' )">
+									<a class="Mrphs-toolsNav__menuitem--link #if(${page.hidden})is-invisible#end" href="javascript:;" title="${page.pageTitle}" onclick="window.open( '${page.pagePopupUrl}${page.pageId}','${page.jsPageTitle}','resizable=yes,toolbar=no,scrollbars=yes, width=1024,height=768' )">
 										<span class="Mrphs-toolsNav__menuitem--icon ${page.menuClass} $!{page.menuClassOverride}"></span>
 										<span class="Mrphs-toolsNav__menuitem--title">${page.pageTitle}</span>
 									</a>
@@ -72,7 +72,7 @@
 							#else
 	
 								<li>
-									<a class="Mrphs-toolsNav__menuitem--link #if(${page.hidden})is-invisible#end" href="${page.pageRefUrl}" title="${page.pageTitle} - ${page.description}">
+									<a class="Mrphs-toolsNav__menuitem--link #if(${page.hidden})is-invisible#end" href="${page.pageRefUrl}" title="${page.pageTitle}">
 										<span class="Mrphs-toolsNav__menuitem--icon ${page.menuClass} $!{page.menuClassOverride}"></span>
 										<span class="Mrphs-toolsNav__menuitem--title">${page.pageTitle}</span>
 									</a>
@@ -107,7 +107,7 @@
 						#if (${page.toolpopup})
 	
 							<li>
-								<a class="Mrphs-toolsNav__menuitem--link #if(${page.hidden})is-invisible#end" href="${page.pageRefUrl}?sakai.popup=yes" title="${page.description}" onclick="window.open('${page.toolpopupurl}');">
+								<a class="Mrphs-toolsNav__menuitem--link #if(${page.hidden})is-invisible#end" href="${page.pageRefUrl}?sakai.popup=yes" title="${page.pageTitle}" onclick="window.open('${page.toolpopupurl}');">
 									<span class="Mrphs-toolsNav__menuitem--icon ${page.menuClass} $!{page.menuClassOverride}"></span>
 									<span class="Mrphs-toolsNav__menuitem--title">${page.pageTitle}</span>
 								</a>
@@ -127,7 +127,7 @@
 							#else
 	
 								<li>
-									<a class="Mrphs-toolsNav__menuitem--link #if(${page.hidden})is-invisible#end" href="${page.pageRefUrl}" title="${page.description}">
+									<a class="Mrphs-toolsNav__menuitem--link #if(${page.hidden})is-invisible#end" href="${page.pageRefUrl}" title="${page.pageTitle}">
 										<span class="Mrphs-toolsNav__menuitem--icon ${page.menuClass} $!{page.menuClassOverride}"></span>
 										<span class="Mrphs-toolsNav__menuitem--title">${page.pageTitle}</span>
 									</a>
