--- a/portal/portal-render-engine-impl/pack/src/webapp/vm/morpheus/site.vm
+++ b/portal/portal-render-engine-impl/pack/src/webapp/vm/morpheus/site.vm
@@ -134,6 +134,8 @@
 
         <script type="text/javascript" src="${pageScriptPath}settings-renamer.js$!{portalCDNQuery}"></script>
 
+        <script type="text/javascript" src="$!{portalCDNPath}/portal/scripts/floating-tool-menu-collapse.js$!{portalCDNQuery}"></script>
+
         #if ( $tutorial && $loggedIn )
             <script>$(document).ready(function(){startTutorial({'showTutorialLocationOnHide': 'true'});});</script>
         #end ## END of IF ( $tutorial && $loggedIn )
