--- a/portal/portal-render-engine-impl/pack/src/webapp/vm/morpheus/includePageBody.vm
+++ b/portal/portal-render-engine-impl/pack/src/webapp/vm/morpheus/includePageBody.vm
@@ -145,6 +145,12 @@
 
                                 #end ## END of IF (${tool.toolShowHelpButton})
 
+                                #if ($toolTitleClass == "sakai-summary-calendar")
+                                  <a id="synopticCalendarOptions" class="Mrphs-toolTitleNav__link" href="javascript:void(0);">
+                                    Options
+                                  </a>
+                                #end
+
                                 </div>
 
                             </nav> ## END nav.Mrphs-toolTitleNav.Mrphs-container.Mrphs-container--toolTitleNav
@@ -319,6 +325,11 @@
 
                                 #end ## END of IF (${tool.toolShowHelpButton})
 
+                                #if ($toolTitleClass == "sakai-summary-calendar")
+                                  <a id="synopticCalendarOptions" class="Mrphs-toolTitleNav__link" href="javascript:void(0);">
+                                    Options
+                                  </a>
+                                #end
                                 </div>
                                 
                             </nav> ## END nav.Mrphs-toolTitleNav.Mrphs-container.Mrphs-container--toolTitleNav
