--- a/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
+++ b/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
@@ -1372,7 +1372,7 @@ div[role="dialog"] {
 }
 div.navIntraTool {
   border-top:none;
-  padding-top: 1em !important;
+  padding-top: 0 !important;
 }
 /* our additions to the top menu */
 
