--- a/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
+++ b/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
@@ -975,7 +975,7 @@ ul#toolbar li em {
     border-top:none !important;
 }
 .dropDownDiv li a {
-    display:block;
+    display:inline;
     text-decoration: none;
 }
 .dropDownDiv li div {
