--- a/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
+++ b/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
@@ -2056,3 +2056,9 @@ nav.Mrphs-container--toolTitleNav {
     border: 1px solid #e5e5e5;
     border-top: none;
 }
+
+
+li.canEdit span.fa-plus.fa-edit-icon.plus-edit-icon:before {
+    font-family: "nyu-classes-icons" !important;
+    content: "\f1c7" !important;
+}
