--- a/portal/portal-render-engine-impl/pack/src/webapp/vm/morpheus/includePageNav.vm
+++ b/portal/portal-render-engine-impl/pack/src/webapp/vm/morpheus/includePageNav.vm
@@ -141,7 +141,8 @@
 		</li>
 	#end ## End for each key 
 
-            #if ( $subSites && $showSubsitesAsFlyout )
+            ## NYU disable subsites
+            #if ( false && $subSites && $showSubsitesAsFlyout )
 
                 <li class="Mrphs-toolsNav__menuitem--subsite">
                     <a id="toggleSubsitesLink" class="Mrphs-toolsNav__menuitem--link" href="javascript:;" title="${rloader.subsitesTitle}" aria-haspopup="true">
@@ -213,7 +214,7 @@
 			</ul>
 		</nav>
 	
-		#if ( $subSites )
+		#if ( false && $subSites )
 	
 			<nav id="subSites" #if ($showSubsitesAsFlyout) class="is-hidden"#end>
 					<ul role="menu">
