--- a/portal/portal-render-engine-impl/pack/src/webapp/vm/morpheus/moresites.vm
+++ b/portal/portal-render-engine-impl/pack/src/webapp/vm/morpheus/moresites.vm
@@ -94,7 +94,7 @@
                                             #end
 
                                             #foreach( $site in $tabsSites.tabsMoreTermsRightPane.get($termKey))
-                                                #if (${site.siteType} != #"course" && !${site.isMyWorkspace})
+                                                #if (!${site.isMyWorkspace})
                                                     #displaySite($site)
                                                 #end
                                             #end
