--- a/assignment/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_new_edit_assignment.vm
+++ b/assignment/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_new_edit_assignment.vm
@@ -1082,7 +1082,7 @@
 				<input type="radio" name="range" id="site" value="site" onclick="$('#groupTable').fadeOut('slow'); ASN.showOrHideAccessMessages( false ); ASN.resizeFrame();"
 				#if( $!range == "site" || $selectedGroupsNotFound )
 					checked="checked"
-				#elseif ($!value_CheckIsGroupSubmission.equals("1") && $!groupsList)
+				#elseif ($!value_additionalOptions.equals("group") && $!groupsList)
 					disabled="disabled"
 				#end
 				/>
