--- a/commons/tool/src/webapp/WEB-INF/templates/edit.hbs
+++ b/commons/tool/src/webapp/WEB-INF/templates/edit.hbs
@@ -2,12 +2,12 @@
     <div class="commons-dialog-container">
         <form id="commons-edit-form">
             <fieldset>
-                <label for="commons-title">Title:</label>
+                <label for="commons-title">{{tr 'commons' 'edit_title'}}</label>
                 <input type="text" id="commons-title" required>
             </fieldset>
 
-            <input type="submit" id="commons-edit-update-button" value="Update Options"/>
-            <button id="commons-edit-cancel-button">Cancel</button>
+            <input type="submit" id="commons-edit-update-button" value="{{tr 'commons' 'edit_save'}}"/>
+            <button id="commons-edit-cancel-button">{{tr 'commons' 'cancel'}}</button>
         </form>
     </div>
 </div>
