I18n for the shortcut

--- a/commons/tool/src/webapp/WEB-INF/templates/edit.hbs
+++ b/commons/tool/src/webapp/WEB-INF/templates/edit.hbs
@@ -6,8 +6,10 @@
                 <input type="text" id="commons-title" required>
             </fieldset>
 
-            <input type="submit" id="commons-edit-update-button" value="{{tr 'commons' 'edit_save'}}"/>
-            <button id="commons-edit-cancel-button">{{tr 'commons' 'cancel'}}</button>
+            <div class="act">
+              <input type="submit" class="active" id="commons-edit-update-button" value="{{tr 'commons' 'edit_save'}}"/>
+              <input type="button" id="commons-edit-cancel-button" value="{{tr 'commons' 'cancel'}}"/>
+            </div>
         </form>
     </div>
 </div>
