--- a/commons/tool/src/webapp/WEB-INF/templates/post.hbs
+++ b/commons/tool/src/webapp/WEB-INF/templates/post.hbs
@@ -25,7 +25,7 @@
                 <div id="commons-post-edit-buttons-{{id}}" class="commons-post-edit-buttons">
                     <button id="commons-inplace-post-editor-post-button-{{id}}">{{tr 'commons' 'post'}}</button>
                     <button onclick="commons.utils.cancelPostEdit('{{id}}');">{{tr 'commons' 'cancel'}}</button>
-                    <span class="commons-comment-help-text">{{tr 'commons' 'keyboard_support'}}</span>
+                    <span class="commons-comment-help-text"><small><code><span class='mac-only'>{{tr 'commons' 'post_shortcut_mac_key'}}</span><span class='pc-only'>{{tr 'commons' 'post_shortcut_pc_key'}}</span> {{tr 'commons' 'post_shortcut_return_key'}}</code> {{tr 'commons' 'post_shortcut_suffix'}}</small></span>
                 </div>
             </div>
         </div> <!-- commons-post-text-container -->
