--- a/commons/tool/src/webapp/WEB-INF/templates/inplace_comment_editor.hbs
+++ b/commons/tool/src/webapp/WEB-INF/templates/inplace_comment_editor.hbs
@@ -4,6 +4,6 @@
     <div id="commons-comment-post-buttons-{{id}}">
         <button id="commons-inplace-comment-editor-post-button-{{id}}">{{tr 'commons' 'post_comment'}}</button>
         <button id="commons-inplace-comment-editor-cancel-button-{{id}}">{{tr 'commons' 'cancel'}}</button>
-        <span class="commons-comment-help-text">{{tr 'commons' 'keyboard_support'}}</span>
+        <span class="commons-comment-help-text"><small><code><span class='mac-only'>{{tr 'commons' 'post_shortcut_mac_key'}}</span><span class='pc-only'>{{tr 'commons' 'post_shortcut_pc_key'}}</span> {{tr 'commons' 'post_shortcut_return_key'}}</code> {{tr 'commons' 'post_shortcut_suffix'}}</small></span>
     </div>
 </div>
