--- a/commons/tool/src/webapp/WEB-INF/templates/inplace_post_editor.hbs
+++ b/commons/tool/src/webapp/WEB-INF/templates/inplace_post_editor.hbs
@@ -2,5 +2,5 @@
 <div>
     <button id="commons-inplace-post-editor-post-button-{{postId}}">{{tr 'commons' 'post'}}</button>
     <button onclick="commons.utils.cancelPostEdit('{{postId}}');">{{tr 'commons' 'cancel'}}</button>
-    <span class="commons-comment-help-text">{{tr 'commons' 'keyboard_support'}}</span>
+    <span class="commons-comment-help-text"><small><code><span class='mac-only'>{{tr 'commons' 'post_shortcut_mac_key'}}</span><span class='pc-only'>{{tr 'commons' 'post_shortcut_pc_key'}}</span> {{tr 'commons' 'post_shortcut_return_key'}}</code> {{tr 'commons' 'post_shortcut_suffix'}}</small></span>
 </div>
