Fix keyboard help text message

--- a/commons/tool/src/webapp/WEB-INF/templates/posts.hbs
+++ b/commons/tool/src/webapp/WEB-INF/templates/posts.hbs
@@ -10,7 +10,7 @@
             <button id="commons-editor-cancel-button" disabled="true">{{tr 'commons' 'cancel'}}</button>
             <button id="commons-editor-link-button" class="commons-editor-special-button" title="{{tr 'commons' 'link_button_tooltip'}}"><span class="fa fa-link"></span></button>
             <button id="commons-editor-image-button" class="commons-editor-special-button" title="{{tr 'commons' 'image_button_tooltip'}}"><span class="fa fa-picture-o"></span></button>
-            <span class="commons-comment-help-text"><small><code><span class='mac-only'>{{tr 'commons' 'post_shortcut_mac_key'}}</span><span class='pc-only'>{{tr 'commons' 'post_shortcut_pc_key'}}</span> {{tr 'commons' 'post_shortcut_return_key'}}</code> {{tr 'commons' 'post_shortcut_suffix'}}</small></span>
+            <span class="commons-comment-help-text hide"><small><code><span class='mac-only'>{{tr 'commons' 'post_shortcut_mac_key'}}</span><span class='pc-only'>{{tr 'commons' 'post_shortcut_pc_key'}}</span> {{tr 'commons' 'post_shortcut_return_key'}}</code> {{tr 'commons' 'post_shortcut_suffix'}}</small></span>
         </div>
     </div>
 
